--- a/public/index.html
+++ b/public/index.html
@@ -24,20 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
-
-    <!-- <link
-      href="vendor/fontawesome-free/css/all.min.css"
-      rel="stylesheet"
-      type="text/css" -->
-    <!-- Custom fonts for this template-->
-    <link
-      href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
-      rel="stylesheet"
-    />
-
-    <!-- Custom styles for this template-->
-    <!-- <link href="assets/css/sb-admin-2.min.css" rel="stylesheet" /> -->
+    <title>Patient Profile Management</title>
   </head>
   <body id="page-top">
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -52,7 +39,5 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-
-    <!-- Bootstrap core JavaScript-->
   </body>
 </html>
